syntax = "proto3";

package workspace;

option go_package = "github.com/pyairtable/workspace-service/proto";

import "google/protobuf/timestamp.proto";

// Workspace Service
service WorkspaceService {
  // Workspace operations
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse);
  rpc GetWorkspace(GetWorkspaceRequest) returns (GetWorkspaceResponse);
  rpc UpdateWorkspace(UpdateWorkspaceRequest) returns (UpdateWorkspaceResponse);
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);
  rpc ListWorkspaces(ListWorkspacesRequest) returns (ListWorkspacesResponse);
  
  // Member management
  rpc InviteMember(InviteMemberRequest) returns (InviteMemberResponse);
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse);
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (UpdateMemberRoleResponse);
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse);
  rpc AcceptInvitation(AcceptInvitationRequest) returns (AcceptInvitationResponse);
  rpc DeclineInvitation(DeclineInvitationRequest) returns (DeclineInvitationResponse);
  
  // Permission management
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
  rpc GrantPermission(GrantPermissionRequest) returns (GrantPermissionResponse);
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
  
  // Settings management
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse);
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);
}

// Enums
enum WorkspaceStatus {
  WORKSPACE_STATUS_UNSPECIFIED = 0;
  WORKSPACE_STATUS_ACTIVE = 1;
  WORKSPACE_STATUS_SUSPENDED = 2;
  WORKSPACE_STATUS_ARCHIVED = 3;
}

enum MemberRole {
  MEMBER_ROLE_UNSPECIFIED = 0;
  MEMBER_ROLE_OWNER = 1;
  MEMBER_ROLE_ADMIN = 2;
  MEMBER_ROLE_EDITOR = 3;
  MEMBER_ROLE_VIEWER = 4;
}

enum InvitationStatus {
  INVITATION_STATUS_UNSPECIFIED = 0;
  INVITATION_STATUS_PENDING = 1;
  INVITATION_STATUS_ACCEPTED = 2;
  INVITATION_STATUS_DECLINED = 3;
  INVITATION_STATUS_EXPIRED = 4;
}

enum Permission {
  PERMISSION_UNSPECIFIED = 0;
  PERMISSION_READ = 1;
  PERMISSION_WRITE = 2;
  PERMISSION_DELETE = 3;
  PERMISSION_MANAGE_MEMBERS = 4;
  PERMISSION_MANAGE_SETTINGS = 5;
  PERMISSION_ADMIN = 6;
}

// Messages
message Workspace {
  string id = 1;
  string name = 2;
  string description = 3;
  string owner_id = 4;
  WorkspaceStatus status = 5;
  WorkspaceSettings settings = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  int32 member_count = 9;
}

message WorkspaceSettings {
  bool allow_external_sharing = 1;
  bool require_two_factor = 2;
  int32 max_members = 3;
  string timezone = 4;
  bool auto_archive_inactive = 5;
  int32 archive_after_days = 6;
  map<string, string> custom_settings = 7;
}

message Member {
  string id = 1;
  string workspace_id = 2;
  string user_id = 3;
  string email = 4;
  string name = 5;
  MemberRole role = 6;
  google.protobuf.Timestamp joined_at = 7;
  google.protobuf.Timestamp last_active = 8;
  bool is_active = 9;
}

message Invitation {
  string id = 1;
  string workspace_id = 2;
  string invited_by = 3;
  string email = 4;
  MemberRole role = 5;
  InvitationStatus status = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp created_at = 8;
  string token = 9;
}

message PermissionGrant {
  string id = 1;
  string workspace_id = 2;
  string user_id = 3;
  string resource_type = 4;
  string resource_id = 5;
  Permission permission = 6;
  google.protobuf.Timestamp granted_at = 7;
  string granted_by = 8;
}

// Workspace requests/responses
message CreateWorkspaceRequest {
  string name = 1;
  string description = 2;
  string owner_id = 3;
  WorkspaceSettings settings = 4;
}

message CreateWorkspaceResponse {
  Workspace workspace = 1;
}

message GetWorkspaceRequest {
  string id = 1;
  string user_id = 2; // for permission check
}

message GetWorkspaceResponse {
  Workspace workspace = 1;
}

message UpdateWorkspaceRequest {
  string id = 1;
  string user_id = 2; // for permission check
  optional string name = 3;
  optional string description = 4;
  optional WorkspaceStatus status = 5;
}

message UpdateWorkspaceResponse {
  Workspace workspace = 1;
}

message DeleteWorkspaceRequest {
  string id = 1;
  string user_id = 2; // for permission check
}

message DeleteWorkspaceResponse {
  bool success = 1;
}

message ListWorkspacesRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  WorkspaceStatus status = 4;
}

message ListWorkspacesResponse {
  repeated Workspace workspaces = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Member requests/responses
message InviteMemberRequest {
  string workspace_id = 1;
  string invited_by = 2;
  string email = 3;
  MemberRole role = 4;
  string message = 5;
}

message InviteMemberResponse {
  Invitation invitation = 1;
}

message RemoveMemberRequest {
  string workspace_id = 1;
  string user_id = 2; // user making the request
  string member_id = 3; // member to remove
}

message RemoveMemberResponse {
  bool success = 1;
}

message UpdateMemberRoleRequest {
  string workspace_id = 1;
  string user_id = 2; // user making the request
  string member_id = 3;
  MemberRole new_role = 4;
}

message UpdateMemberRoleResponse {
  Member member = 1;
}

message ListMembersRequest {
  string workspace_id = 1;
  string user_id = 2; // for permission check
  int32 page = 3;
  int32 page_size = 4;
  MemberRole role_filter = 5;
}

message ListMembersResponse {
  repeated Member members = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message AcceptInvitationRequest {
  string token = 1;
  string user_id = 2;
}

message AcceptInvitationResponse {
  Member member = 1;
}

message DeclineInvitationRequest {
  string token = 1;
}

message DeclineInvitationResponse {
  bool success = 1;
}

// Permission requests/responses
message CheckPermissionRequest {
  string workspace_id = 1;
  string user_id = 2;
  string resource_type = 3;
  string resource_id = 4;
  Permission permission = 5;
}

message CheckPermissionResponse {
  bool has_permission = 1;
}

message GrantPermissionRequest {
  string workspace_id = 1;
  string granted_by = 2;
  string user_id = 3;
  string resource_type = 4;
  string resource_id = 5;
  Permission permission = 6;
}

message GrantPermissionResponse {
  PermissionGrant permission_grant = 1;
}

message RevokePermissionRequest {
  string workspace_id = 1;
  string revoked_by = 2;
  string user_id = 3;
  string resource_type = 4;
  string resource_id = 5;
  Permission permission = 6;
}

message RevokePermissionResponse {
  bool success = 1;
}

message ListPermissionsRequest {
  string workspace_id = 1;
  string user_id = 2; // user making the request
  optional string target_user_id = 3; // optional filter
  string resource_type = 4;
  string resource_id = 5;
}

message ListPermissionsResponse {
  repeated PermissionGrant permissions = 1;
}

// Settings requests/responses
message UpdateSettingsRequest {
  string workspace_id = 1;
  string user_id = 2; // for permission check
  WorkspaceSettings settings = 3;
}

message UpdateSettingsResponse {
  WorkspaceSettings settings = 1;
}

message GetSettingsRequest {
  string workspace_id = 1;
  string user_id = 2; // for permission check
}

message GetSettingsResponse {
  WorkspaceSettings settings = 1;
}